fix: feature area text-align on md device

--- a/css/style.css
+++ b/css/style.css
@@ -6708,6 +6708,19 @@ body.admin-bar .header-menu-area.sticky_menu {
     gap: 20px;
   }
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .feature-item {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    text-align: center;
+  }
+  .feature-item .icon-wrapper {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
 .feature-item .icon-wrapper {
   width: 85px;
   height: 85px;
@@ -6822,18 +6835,6 @@ body.admin-bar .header-menu-area.sticky_menu {
 }
 .feature-item.active .icon-wrapper .count {
   background-color: #111821;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .feature-item {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-  }
-  .feature-item .icon-wrapper {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
 }
 
 .testimonial-area.style-1 {
