--- a/sass/modules/_feature-area.scss
+++ b/sass/modules/_feature-area.scss
@@ -80,6 +80,17 @@
     text-align: center;
     gap: 20px;
   }
+  @include md {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    text-align: center;
+    .icon-wrapper {
+      margin-right: 0;
+      margin-bottom: 20px;
+    }
+  }
   .icon-wrapper {
     width: 85px;
     height: 85px;
@@ -185,14 +196,5 @@
       }
     }
   }
-  @include md {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    .icon-wrapper {
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-  }
+ 
 }
